# soem_interface

./: CMakeLists.txt  README.md
include/soem_interface/: EthercatBusBase.hpp  EthercatSlaveBase.hpp
include/soem_interface/common/: Macros.hpp
soem_interface_drivers/: CMakeLists.txt
soem_interface_drivers/include/soem_interface_drivers/: EL1004.hpp  EL1008.hpp  EL2004.hpp  EL2008.hpp  ExampleSlave.hpp  Lenze_I550.hpp
soem_interface_drivers/src/: example_slave.cpp
soem_interface_drivers/src/soem_interface_drivers/: EL1004.cpp  EL1008.cpp  EL2004.cpp  EL2008.cpp  ExampleSlave.cpp  Lenze_I550.cpp
src/soem_interface/: EthercatBusBase.cpp  EthercatBusManagerBase.cpp
src/soem_interface/common/: Macros.cpp
